# speedometer_firmware

./: .gitignore  CMakeLists.txt  buzzer.c  buzzer.h  seven_segment.c  seven_segment.h  speed_detect.c  speed_detect.h  speedometer.c
